<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_detail">Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_temperature_key" translateable="false">temperature_units</string>
    <string name="pref_temperature_title">Temperature Units</string>
    <string name="pref_temperature_dialog_title">Temperature Units</string>
    <string name="pref_temperature_default">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_units_metric">Metric</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
</resources>
